# using_dbus

./: .gitignore  CMakeLists.txt  README.md  testCommunication.pro
adaptorApp/: CMakeLists.txt  adaptorApp.pro  main.cpp  widgetwithadaptor.cpp  widgetwithadaptor.h
interfaceApp/: CMakeLists.txt  interfaceApp.pro  main.cpp  widgetwithinterface.cpp  widgetwithinterface.h
shared/: mydata.cpp  mydata.h  summa.xml
src/adaptor/: CMakeLists.txt  main.cpp  widget_with_adaptor.cpp  widget_with_adaptor.h
src/interface/: CMakeLists.txt  main.cpp  widget_with_interface.cpp  widget_with_interface.h
src/shared/: connector_widget.cpp  connector_widget.h  my_data.cpp  my_data.h  summa.xml
